Renamed function get_conv_params to get_convergence_parameters

--- a/tutorials/tutorial_geometry.ipynb
+++ b/tutorials/tutorial_geometry.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Tutorial for geometry.py\n",
     "\n",
-    "This notebook will introduce some of the most useful functionalities of the geometry.py class. The geometry.py module allows you to manipulate geometry file types of typical DFT codes. It has a focus on surface geometries.\n",
+    "This notebook will introduce some of the most useful functionalities of the geometry.py class. The geometry.py module allows you to manipulate geometry file types of typical DFT codes. It has a focus on surface geometries. Beware this tutorial, among being exceedingly useful, contains attempts to be funny.\n",
     "\n",
     "First we load the necessary dependecies:"
    ]
