Fixed minor bug in get_geometry

--- a/tutorials/tutorial_geometry.ipynb
+++ b/tutorials/tutorial_geometry.ipynb
@@ -478,7 +478,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/lukas/Source/dfttools/dfttools/geometry.py:2637: UserWarning: Geometry.getIndicesOfAdsorbates: Substrate is not explicitly defined. Using fallback solution of counting all metal atoms as substrate.\n",
+      "/home/lukas/Source/dfttools/dfttools/geometry.py:2552: UserWarning: Geometry.getIndicesOfAdsorbates: Substrate is not explicitly defined. Using fallback solution of counting all metal atoms as substrate.\n",
       "  warnings.warn(\n"
      ]
     },
@@ -1878,7 +1878,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "48\n",
+      "number of symmetries 48\n",
       "[[1 0 0]\n",
       " [0 1 0]\n",
       " [0 0 1]]\n",
@@ -2075,7 +2075,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
+      "number of symmetries 12\n",
       "[[1 0 0]\n",
       " [0 1 0]\n",
       " [0 0 1]]\n",
