--- a/tutorials/tutorial_geometry.ipynb
+++ b/tutorials/tutorial_geometry.ipynb
@@ -18,7 +18,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from dfttools import geometry"
+    "from dfttoolkit import geometry"
    ]
   },
   {
@@ -478,7 +478,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/lukas/Source/dfttools/dfttools/geometry.py:2552: UserWarning: Geometry.getIndicesOfAdsorbates: Substrate is not explicitly defined. Using fallback solution of counting all metal atoms as substrate.\n",
+      "/home/lukas/Source/dfttoolkit/dfttoolkit/geometry.py:2552: UserWarning: Geometry.getIndicesOfAdsorbates: Substrate is not explicitly defined. Using fallback solution of counting all metal atoms as substrate.\n",
       "  warnings.warn(\n"
      ]
     },
